# mega_auth_service

./: .clang-format  .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  auth_hardcore_tests_v3.sh  docker-compose.yml
config/: 000_init.sql  appsettings.json
docker/: entrypoint.sh
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/dashboards/files/: authservice_dashboard.json
grafana/provisioning/datasources/: datasource.yml
include/: util.hpp
openapi/: openapi.yaml
scripts/: run.sh
src/: main.cpp  metrics.hpp  router.hpp  routes.cpp
src/domain/: password_hash.cpp  password_hash.hpp
src/handlers/: docs.hpp  health.hpp
src/handlers/auth/: auth_change_password.cpp  auth_change_password.hpp  auth_common.hpp  auth_device_login.cpp  auth_device_login.hpp  auth_forgot.cpp  auth_forgot.hpp  auth_login.cpp  auth_login.hpp  auth_logout.cpp  auth_logout.hpp  auth_register.cpp  auth_register.hpp  auth_reset.cpp  auth_reset.hpp
src/infra/: cert_repo.cpp  cert_repo.hpp  db.cpp  db.hpp  email_sender.cpp  email_sender.hpp  errors.hpp  interfaces.hpp  pki_service.cpp  pki_service.hpp  user_repo.cpp  user_repo.hpp  webauthn_service.cpp  webauthn_service.hpp
src/middleware/: cors.hpp
src/registration/: ClientCertRegistration.cpp  ClientCertRegistration.hpp  IRegistrationStrategy.hpp  PasswordRegistration.cpp  PasswordRegistration.hpp  RegistrationFactory.hpp  RegistrationMethod.hpp  RegistrationService.cpp  RegistrationService.hpp  WebAuthnRegistration.cpp  WebAuthnRegistration.hpp
src/utils/: validation.cpp  validation.hpp
telegraf/: telegraf.conf
